--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
             <div class="heading">
                 <div class="wrap-text">
                     <div class="icon"><img src="/assets/pet-btn-black.svg" alt=""></div>
-                    <div class="text">Our Team</div>
+                    <div class="text">Blog</div>
                 </div>
                 <div class="line"></div>
             </div>
