--- a/tuan 19/index.html
+++ b/tuan 19/index.html
@@ -106,7 +106,7 @@
                                     <div class="icon"><img src="/assets/solar_heart-line-duotone.svg" alt=""></div>
                                 </div>
                                 <div class="content-hov">
-                                    <div class="head">Multivitamin For Cat</div>
+                                    <div class="head">Cat Food</div> 
                                     <div class="sub-head">Lorem ipsum dolor sit amet consectetur. Vitae donec pellentesque ut eget tempor egestas diam.</div>
                                 </div>
                                 <div class="ft"><img src="/assets/Frame 14.svg" alt=""></div>
@@ -328,7 +328,7 @@
     </div>
     <div class="section-5">
         <div class="wrap">
-            <div class="title">
+            <div class="heading">
                 <div class="wrap-text">
                     <div class="icon"><img src="/assets/pet-btn-black.svg" alt=""></div>
                     <div class="text">Blog</div>
@@ -336,7 +336,7 @@
                 <div class="line"></div>
             </div>
             <div class="content">
-                <div class="container">
+                <div class="wrap-cont">
                    <div class="left">
                         <div class="title">Milestone: 20,000 Pets Treated</div>
                         <div class="sub-container">
