--- a/tuan 19/index.html
+++ b/tuan 19/index.html
@@ -93,8 +93,8 @@
                                     <div class="icon"><img src="/assets/solar_heart-line-duotone.svg" alt=""></div>
                                 </div>
                                 <div class="content-hover">
-                                    <div class="title">Multivitamin For Cat</div>
-                                    <div class="text">Lorem ipsum dolor sit amet consectetur. Vitae donec pellentesque ut eget tempor egestas diam.</div>
+                                    <div class="title-hov">Multivitamin For Cat</div>
+                                    <div class="text-hov">Lorem ipsum dolor sit amet consectetur. Vitae donec pellentesque ut eget tempor egestas diam.</div>
                                 </div>
                                 <div class="ft"><img src="/assets/Frame 14.svg" alt=""></div>
                             </div>
@@ -105,8 +105,8 @@
                                     <div class="text">₦15,000.00</div>
                                     <div class="icon"><img src="/assets/solar_heart-line-duotone.svg" alt=""></div>
                                 </div>
-                                <div class="content-hov">
-                                    <div class="head">Cat Food</div> 
+                                <div class="content-hover">
+                                    <div class="title-hov">Cat Food</div> 
                                     <div class="sub-head">Lorem ipsum dolor sit amet consectetur. Vitae donec pellentesque ut eget tempor egestas diam.</div>
                                 </div>
                                 <div class="ft"><img src="/assets/Frame 14.svg" alt=""></div>
@@ -118,8 +118,8 @@
                                     <div class="text">₦15,000.00</div>
                                     <div class="icon"><img src="/assets/solar_heart-line-duotone.svg" alt=""></div>
                                 </div>
-                                <div class="content-hov">
-                                    <div class="head">Multivitamin For Cat</div>
+                                <div class="content-hover">
+                                    <div class="title-hov">Multivitamin For Cat</div>
                                     <div class="sub-head">Lorem ipsum dolor sit amet consectetur. Vitae donec pellentesque ut eget tempor egestas diam.</div>
                                 </div>
                                 <div class="ft"><img src="/assets/Frame 14.svg" alt=""></div>
