--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                     <div class="icon"><img src="/assets/solar_heart-line-duotone.svg" alt=""></div>
                                 </div>
                                 <div class="content-hov">
-                                    <div class="head">Multivitamin For Cat</div>
+                                    <div class="head">Dog Food</div>
                                     <div class="sub-head">Lorem ipsum dolor sit amet consectetur. Vitae donec pellentesque ut eget tempor egestas diam.</div>
                                 </div>
                                 <div class="ft"><img src="/assets/Frame 14.svg" alt=""></div>
