--- a/tuan 19/index.html
+++ b/tuan 19/index.html
@@ -119,7 +119,7 @@
                                     <div class="icon"><img src="/assets/solar_heart-line-duotone.svg" alt=""></div>
                                 </div>
                                 <div class="content-hover">
-                                    <div class="title-hov">Multivitamin For Cat</div>
+                                    <div class="title-hov">Dog Food</div>
                                     <div class="sub-head">Lorem ipsum dolor sit amet consectetur. Vitae donec pellentesque ut eget tempor egestas diam.</div>
                                 </div>
                                 <div class="ft"><img src="/assets/Frame 14.svg" alt=""></div>
